# text-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buffer.c  buffer_impl.h  controller.c  controller.h  file.c  line.c  main.c  view.c  view.h
buffer/: buffer.c  buffer.h  file.c  line.c  line.h
